--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
     </head>
     <body>
     <header class="sticky-top">
-        <nav class="navbar navbar-dark bg-dark" id="topbar">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="./index.html">
-                        <img src="./img/kebab.png" alt="small-logo" class="d-inline-block align-text-top" id="logo-small">
-                        <span class="brand-name">Adonis Kebab</span>
-                    </a>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <div class="container px-5">
+                <a class="navbar-brand" href="./index.html">
+                    <img src="./img/kebab.png" alt="small-logo" class="d-inline-block align-text-top" id="logo-small">
+                    <span class="brand-name">Adonis Kebab</span>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Kontakt</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Galeria</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">O nas</a></li>
+                    </ul>
+                    <button type="button" class="btn btn-danger btn-order">Zamów!</button>
                 </div>
-                <nav class="nav">
-                    <a class="nav-link" aria-current="page" href="#">Kontakt</a>
-                    <a class="nav-link" href="#">Galeria</a>
-                    <a class="nav-link" href="#">O nas</a>
-                </nav>
-                <button type="button" class="btn btn-danger">Zamów!</button>
             </div>
         </nav>
     </header>
@@ -37,12 +38,13 @@
         <h1 class="brand-name-big brand-name">Adonis<br>Kebab</h1>
         <p class="lead" style="color: #999; font-size: 2vw;">Najpiękniejszy kebab w Polsce!</p>
         <p class="lead">
-            <a class="btn btn-danger btn-lg" href="#" role="button" id="btn-zamow">Zamów!</a>
-            <a class="btn btn-dark btn-lg" href="#" role="button" id="btn-kontakt">Kontakt</a>
+            <a class="btn btn-danger btn-lg btn-zamow" href="#order" role="button" id="btn-order">Zamów!</a>
+            <a class="btn btn-dark btn-lg" href="#" role="button" id="btn-contact">Kontakt</a>
         </p>
     </div>
+    <form id="order"></form>
 
-    <button type="button" id="button-galeria">Galeria</button>
+    <button type="button" id="button-gallery">Galeria</button>
     <div class="row">
         <div class="col-md-4">
             <div class="card">
