--- a/index.html
+++ b/index.html
@@ -13,38 +13,45 @@
         <script src="https://kit.fontawesome.com/a2ee819d1b.js" crossorigin="anonymous"></script>
     </head>
     <body>
+
     <header class="sticky-top">
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container px-5">
                 <a class="navbar-brand" href="./index.html">
-                    <img src="./img/kebab.png" alt="small-logo" class="d-inline-block align-text-top" id="logo-small">
+                    <img src="./img/kebab.png" alt="small-logo" class="d-inline-block align-text-top logo-small">
                     <span class="brand-name">Adonis Kebab</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Kontakt</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Galeria</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">O nas</a></li>
+                        <li class="nav-item"><a class="nav-link" aria-current="page" href="contact.html">Kontakt</a></li>
+                        <li class="nav-item"><a class="nav-link" href="gallery.html">Galeria</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">O nas</a></li>
                     </ul>
-                    <button type="button" class="btn btn-danger btn-order">Zamów!</button>
+                    <a type="button" href="#order" class="btn btn-danger btn-order" id="#btn-order">Zamów!</a>
                 </div>
             </div>
         </nav>
     </header>
+
 
     <div class="jumbotron">
         <div class="jumbotron-elements"></div>
         <h1 class="brand-name-big brand-name">Adonis<br>Kebab</h1>
         <p class="lead" style="color: #999; font-size: 2vw;">Najpiękniejszy kebab w Polsce!</p>
         <p class="lead">
-            <a class="btn btn-danger btn-lg btn-zamow" href="#order" role="button" id="btn-order">Zamów!</a>
-            <a class="btn btn-dark btn-lg" href="#" role="button" id="btn-contact">Kontakt</a>
+            <a class="btn btn-danger btn-lg btn-order" href="#order" role="button">Zamów!</a>
+            <a class="btn btn-dark btn-lg" href="contact.html" role="button" id="btn-contact">Kontakt</a>
         </p>
     </div>
+
+
     <form id="order"></form>
 
-    <button type="button" id="button-gallery">Galeria</button>
+
+    <a href ="gallery.html" id="button-gallery">Galeria</a>
+
+
     <div class="row">
         <div class="col-md-4">
             <div class="card">
@@ -52,7 +59,7 @@
                 <div class="card-body">
                     <h5 class="card-title">O nas</h5>
                     <p class="card-text">Dowiedz się więcej o najpiękniejszym kebabie w Polsce</p>
-                    <button type="button" class="btn btn-dark" id="btn-o-nas">O nas</button>
+                    <a href="about.html" class="btn btn-dark" id="btn-o-nas">O nas</a>
                 </div>
             </div>
         </div>
@@ -62,7 +69,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Lokalizacja</h5>
                     <p class="card-text">Tutaj nas znajdziesz</p>
-                    <a href="#" class="btn btn-primary">Lokalizacja</a>
+                    <a href="https://goo.gl/maps/axGgyQ5cE1YBnoAM9" class="btn btn-primary">Lokalizacja</a>
                 </div>
             </div>
         </div>
@@ -72,11 +79,12 @@
                 <div class="card-body">
                     <h5 class="card-title">Złap Kebsa!</h5>
                     <p class="card-text">Zbieraj spadające kebaby i zdobywaj punkty w pysznej grze!</p>
-                    <a href="#" class="btn btn-success">Graj!</a>
+                    <a href="game.html" class="btn btn-success">Graj!</a>
                 </div>
             </div>
         </div>
     </div>
+
 
     <footer class="bg-dark">
         <div class="row">
@@ -88,22 +96,18 @@
         </div>
         <div class="row" style="justify-content: center;">
             <div class="col-md-2">
-                <a href="">Napis</a><br>
-                <a href="">Napis</a><br>
-                <a href="">Napis</a>
+                <a href="contact.html">Kontakt</a><br>
+                <a href="gallery.html">Galeria</a><br>
             </div>
             <div class="col-md-2">
-                <a href="">Napis</a><br>
-                <a href="">Napis</a><br>
-                <a href="">Napis</a>
+                <a href="about.html">O nas</a><br>
+                <a href="">Lokalizacja</a><br>
             </div>
             <div class="col-md-2">
-                <a href="">Napis</a><br>
-                <a href="">Napis</a><br>
-                <a href="">Napis</a>
+                <a href="game.html">Gra</a><br>
+                <a href="#order" class="btn-order">Zamów</a><br>
             </div>
         </div>
     </footer>
-
     </body>
 </html>
