added actual weather to contact and deleted script from where it's unused

--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,13 @@
         <link rel="stylesheet" href="./css/style.css" type="text/css">
         <link rel="stylesheet" href="./css/lightbox.css" type="text/css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="./js/script.js"></script>
         <script src="./js/lightbox.js"></script>
+        <script src="./js/weather.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
                 integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/a2ee819d1b.js" crossorigin="anonymous"></script>
-        <script src="https://maps.google.com/maps/api/js?key=AIzaSyD41NLJ3vzn6Z9fVqknhuwjwRJMcG-BzxU" ></script>
     </head>
     <body>
 
@@ -57,13 +56,10 @@
                 <i class="fa-solid fa-envelope-circle-check"></i> kontakt@adoniskebab.pl <br><br>
             </div>
             <div class="col-md-6">
-                <div id="map" style="width:350px; height:250px;">
-                </div>
             </div>
         </div>
         <h1>Zawsze jest pogoda na kebaba!</h1>
-        <a class="weatherwidget-io" href="https://forecast7.com/pl/50d8820d80/beczkow/" data-label_1="BĘCZKÓW"
-            data-label_2="Pogoda" data-icons="Climacons Animated" data-theme="weather_one" >BĘCZKÓW Pogoda</a>
+        <span id="weather">Aktualnie:</span>
         <script>
             !function(d,s,id){
                 let js,fjs=d.getElementsByTagName(s)[0];
