--- a/contact.html
+++ b/contact.html
@@ -59,17 +59,17 @@
             </div>
         </div>
         <h1>Zawsze jest pogoda na kebaba!</h1>
-        <span id="weather">Aktualnie:</span>
-        <script>
-            !function(d,s,id){
-                let js,fjs=d.getElementsByTagName(s)[0];
-                if(!d.getElementById(id)){
-                    js=d.createElement(s);
-                    js.id=id;
-                    js.src='https://weatherwidget.io/js/widget.min.js';
-                    fjs.parentNode.insertBefore(js,fjs);}}
-            (document,'script','weatherwidget-io-js');
-        </script>
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-3"><i class="fa-solid fa-temperature-half fa-7x"></i></div>
+            <div class="col-md-3" id="weather">Aktualnie:</div>
+            <div class="col-md-3"></div>
+        </div>
+        <div class = "row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4" id="time"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 
 
