--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Adonis Kebab</title>
+        <link rel="icon" href="./img/kebab.png">
         <link rel="stylesheet" href="./css/style.css" type="text/css">
-        <link rel="stylesheet" href="./css/lightbox.css" type="text/css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="./js/lightbox.js"></script>
         <script src="./js/weather.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
                 integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -42,7 +41,7 @@
     </header>
 
 
-    <div id="contact">
+    <main id="contact">
         <h1>Kontakt</h1>
         <h2>Skontaktuj się z nami i zamów najpiękniejszego kebaba w Polsce przez telefon!</h2>
         <div class="row">
@@ -56,6 +55,11 @@
                 <i class="fa-solid fa-envelope-circle-check"></i> kontakt@adoniskebab.pl <br><br>
             </div>
             <div class="col-md-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2517.31067035944!2d20.801503016115635
+                !3d50.880960179537055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4718210838e6d525%3A0xe48b7ca34
+                16d7c4a!2sJana%20Paw%C5%82a%20II%208%2C%2026-008!5e0!3m2!1sen!2spl!4v1654530958221!5m2!1sen!2spl"
+                        style="border:0; width: 30vw; height: 350px;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
         <h1>Zawsze jest pogoda na kebaba!</h1>
@@ -70,7 +74,7 @@
             <div class="col-md-4" id="time"></div>
             <div class="col-md-4"></div>
         </div>
-    </div>
+    </main>
 
 
     <footer class="bg-dark">
@@ -88,7 +92,7 @@
             </div>
             <div class="col-md-2">
                 <a href="about.html">O nas</a><br>
-                <a href="">Lokalizacja</a><br>
+                <a href="history.html">Historia zamówień</a><br>
             </div>
             <div class="col-md-2">
                 <a href="game.html">Gra</a><br>
